--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Git</title>
 </head>
 <body>
-    <h1>Learning Git</h1>
+    <h1 id="heading">Learning Git</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, maiores.</p>
 </body>
 </html>
